test/domains/johnk/capacityTooBig.chpl
var D : domain(string);

D.requestCapacity(864691128455135208);
